--- a/src/components/PostItem/PostItem.css
+++ b/src/components/PostItem/PostItem.css
@@ -24,3 +24,10 @@
     background-color: #f3f3f3;
     border-radius: 5px;
 }
+
+.header-post-flex {
+    display: flex;
+    /*flex-direction: row;*/
+    justify-content: space-between;
+    align-items: flex-start;
+}
