--- a/src/components/PostsList/PostsList.css
+++ b/src/components/PostsList/PostsList.css
@@ -1,7 +1,13 @@
 .post-item {
     padding: 10px;
     border: 2px solid black;
-    margin-bottom: 5px;
+
     background-color: rgba(132, 160, 174, 0.39);
+    width: 500px;
+    margin: auto;
     /*text-align: center;*/
+}
+
+.post-item {
+    margin-bottom: 5px;
 }
