--- a/src/components/PostsList/PostsList.css
+++ b/src/components/PostsList/PostsList.css
@@ -1,11 +1,11 @@
 .post-item {
     padding: 10px;
     border: 2px solid black;
-
-    background-color: rgba(132, 160, 174, 0.39);
+    border-radius: 5px;
+    list-style-type: none;
+    background-color: rgba(132, 160, 174, 0.2) ;
     width: 500px;
     margin: auto;
-    /*text-align: center;*/
 }
 
 .post-item {
