refactored component addPost as modal window

--- a/src/components/PostItem/PostItem.module.scss
+++ b/src/components/PostItem/PostItem.module.scss
@@ -4,13 +4,12 @@
     box-sizing: border-box;
 }
 
-$color_wave: #4b96a3;
+$color_visited: black;
 
 .titleItem {
     font-weight: bold;
     font-size: 20px;
     width: 80%;
-
 }
 
 .bodyItem {
@@ -19,78 +18,42 @@ $color_wave: #4b96a3;
     width: 80%;
 }
 
-.bts-flex {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-}
-
-
-
-.headerPostFlex {
-    display: flex;
-    /*flex-direction: row;*/
-    justify-content: space-between;
-    align-items: center;
-
-    .btn {
-        margin-right: 10px;
-        padding: 5px 10px;
-        background-color: #f3f3f3;
-        border-radius: 5px;
-    }
-
-    .addComment {
-        color: white;
-        background-color: $color_wave;
-        border: 1px solid white;
-        //margin-bottom: 5px;
-    }
-}
-
-.icon {
-    width: 20px;
-    margin-right: 20px;
-
-    &:hover {
-        width: 25px;
-    }
-}
-
-
-.inputFormComment{
-    margin-right: 10px;
-    font-size: 15px;
-}
-
-.btn {
-    padding: 5px;
-    border-radius: 5px;
-}
-
-
-.flex {
-    display: flex;
-    align-items: center;
-    //padding: 5px;
-}
-.flexS {
-    display: flex;
-    flex-direction: column;
-}
-
-.widthh {
-    width: 600px;
-}
 .link {
     text-decoration: none;
-    //color: #3498db;
-    //decoration: none;
 }
 
 .link:visited
 {
     text-decoration: none;
-    color: black;
+    color: $color_visited;
+}
 
+.flexBts {
+    display: flex;
+    flex-direction: column;
+}
+
+.form {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+
+    .inputFormComment{
+        margin-right: 10px;
+        font-size: 15px;
+        width: 200px;
+    }
+
+    .btn {
+        padding: 5px;
+        border-radius: 5px;
+        text-transform: uppercase;
+    }
+}
+
+.commentsList {
+    width: 500px;
+    list-style-type: none;
 }
